--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leanderson Portfolio</title>
+  <title>Leanderson Zardin - Portfolio</title>
   <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
   <link rel="stylesheet" href="style/general.css">
   <link rel="stylesheet" href="style/header.css">
@@ -13,6 +13,73 @@
   <link rel="stylesheet" href="style/media.css">
 </head>
 <body>
-  
+  <header>
+    <div class="container">
+      <nav>
+        <div class="logo">
+          <figure>
+            <img src="img/logo-icon.svg" alt="logo">
+          </figure>
+          <p>MARSMOK</p>
+        </div>
+        <ul>
+          <li>
+            <a href="#">Início</a>
+          </li>
+          <li>
+            <a href="#">Sobre</a>
+          </li>
+          <li>
+            <a href="#">Projetos</a>
+          </li>
+          <li>
+            <a href="#">Contato</a>
+          </li>
+        </ul>
+        <div class="toggle">
+          <div class="line"></div>
+          <div class="line"></div>
+          <div class="line"></div>
+        </div>
+      </nav>
+      <div class="principal-section">
+        <div class="welcome">
+          <h1>Olá! Meu nome é <br> Leanderson Zardin</h1>
+          <p>Programador <span>Frontend</span></p>
+          <a href="cv/CV Leanderson Zardin.pdf" download class="cv">Baixar CV</a>
+          <div class="social-network">
+            <a href="https://www.linkedin.com/feed/">
+              <img src="img/linkedin-in.svg" alt="linkedin">
+            </a>
+            <a href="https://github.com/Leanderson-Zardin">
+              <img src="img/github.svg" alt="github">
+            </a>
+            <a href="https://www.instagram.com/marsmok_/">
+              <img src="img/instagram.svg" alt="instagram">
+            </a>
+          </div>
+        </div>
+        <figure>
+          <img src="img/marsmok-image-3.png" alt="Imagem de Marsmok" class="marsmok-image">
+          <img src="img/html5.svg" alt="html" class="icon html">
+          <img src="img/css3.svg" alt="css" class="icon css">
+          <img src="img/js.svg" alt="javascript" class="icon js">
+        </figure>
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="container">
+      <figure>
+        <img src="img/marsmok-image-2.jpg" alt="marsmok">
+      </figure>
+      <div class="about">
+        <h2>Sobre Mim</h2>
+        <p>
+
+        </p>
+      </div>
+    </div>
+  </main>
 </body>
 </html>
