--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a href="#works">Projetos</a>
           </li>
           <li>
-            <a href="#">Contato</a>
+            <a href="#contact">Contato</a>
           </li>
         </ul>
         <div class="toggle">
@@ -166,6 +166,43 @@
             Ver Mais Projetos
           </a>
         </button>
+      </div>
+    </section>
+    <section class="contact-section" id="contact">
+      <div class="container contact-container">
+        <h2>Contato</h2>
+        <form action="https://api.staticforms.xyz/submit" method="post" class="grid-form">
+          <div class="nome">
+            <label for="nome">Nome</label>
+            <input type="text" name="name" required placeholder="Digite seu nome" autocomplete="off">
+          </div>
+          <div class="email">
+            <label for="email">Email</label>
+            <input type="email" name="email" placeholder="Digite seu email" required>
+          </div>
+          <div class="mensagem">
+            <label for="message">Mensagem</label>
+            <textarea name="message" cols="30" rows="10" placeholder="Digite sua mensagem" required></textarea>
+          </div>
+          <button type="submit">Enviar Mensagem</button>
+
+          <input type="hidden" name="accessKey" value="cc113016-c545-4af8-b3ac-59f536b1e426">
+          <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/form-thanks.html">
+        </form>
+        <div class="social-network">
+          <a href="https://www.linkedin.com/feed/">
+            <img src="img/linkedin-in.svg" alt="linkedin">
+          </a>
+          <a href="https://github.com/Leanderson-Zardin">
+            <img src="img/github.svg" alt="github">
+          </a>
+          <a href="https://www.instagram.com/marsmok_/">
+            <img src="img/instagram.svg" alt="instagram">
+          </a>
+          <a href="https://wa.me/5551986587999">
+            <img src="/img/whatsapp.svg" alt="whatsapp">
+          </a>
+        </div>
       </div>
     </section>
   </main>
