--- a/form-thanks.html
+++ b/form-thanks.html
@@ -6,8 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mensagem Enviada</title>
   <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/x-icon">
+  <link rel="stylesheet" href="/style/form-thank-style.css">
 </head>
 <body>
-  <h1>Olá</h1>
+  <figure>
+    <img src="img/marsmok-image-3.png" alt="">
+  </figure>
+  <h1>Obrigado por entrar em contato!</h1>
+  <p>Você receberá sua resposta em até 24 horas.</p>
+  <button>Voltar</button>
 </body>
 </html>
