--- a/form-thanks.html
+++ b/form-thanks.html
@@ -14,6 +14,10 @@
   </figure>
   <h1>Obrigado por entrar em contato!</h1>
   <p>Você receberá sua resposta em até 24 horas.</p>
-  <button>Voltar</button>
+  <button>
+    <a href="/index.html">
+      Voltar
+    </a>
+  </button>
 </body>
 </html>
