--- a/index.html
+++ b/index.html
@@ -206,5 +206,13 @@
       </div>
     </section>
   </main>
+  <footer>
+    <div class="container footer-container">
+      <h3>Espero que tenha Gostado!</h3>
+      <p>
+        @copyright by Marsmok
+      </p>
+    </div>
+  </footer>
 </body>
 </html>
