Form Thanks Separado

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <button type="submit">Enviar Mensagem</button>
 
           <input type="hidden" name="accessKey" value="cc113016-c545-4af8-b3ac-59f536b1e426">
-          <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/form-thanks.html">
+          <input type="hidden" name="redirectTo" value="/form-thank.html">
         </form>
         <div class="social-network">
           <a href="https://www.linkedin.com/feed/">
