--- a/html/form-thanks.html
+++ b/html/form-thanks.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <figure>
-    <img src="img/marsmok-image-3.png" alt="">
+    <img src="/img/marsmok-image-3.png" alt="">
   </figure>
   <h1>Obrigado por entrar em contato!</h1>
   <p>Você receberá sua resposta em até 24 horas.</p>
