--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
   <link rel="stylesheet" href="style/media.css">
 </head>
 <body>
-  <div class="background">
-    <img src="img/textura5.jpg" alt="">
-  </div>
   <header>
     <section class="container">
       <nav>
@@ -211,7 +208,7 @@
           <button type="submit">Enviar Mensagem</button>
 
           <input type="hidden" name="accessKey" value="cc113016-c545-4af8-b3ac-59f536b1e426">
-          <input type="hidden" name="redirectTo" value="/form-thank.html">
+          <input type="hidden" name="redirectTo" value="https://portfolio-submission-page.vercel.app/">
         </form>
         <div class="social-network">
           <a href="https://www.linkedin.com/feed/">
