--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="style/main.css">
   <link rel="stylesheet" href="style/footer.css">  
   <link rel="stylesheet" href="style/media.css">
+  <link rel="stylesheet" href="style/animations.css">
 </head>
 <body>
   <header>
