Bug da animação atualizado

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </figure>
           <p>MARSMOK</p>
         </div>
-        <ul>
+        <ul class="nav-ul">
           <li>
             <a href="#home">Início</a>
             <hr>
